# vertex-pipelines

./: .gitignore  NOTICE  README.md
dx12/: CMakeLists.txt  Constants.h  DX12Window.cpp  DX12Window.h  DXWindow.cpp  DXWindow.h  DescriptorHeap.cpp  Fence.cpp  Fence.h  Frame.cpp  Frame.h  FrameData.cpp  FrameData.h  SwapChain.cpp  SwapChain.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h  WindowCallback.h  main.cpp  stdafx.h
dx12/common/: CMakeLists.txt
dx12/dxutil/: CMakeLists.txt  DefaultBuffer.cpp  DefaultBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  Error.h  Fence.cpp  Fence.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h
dx12/shaders/: CMakeLists.txt  basic_triangle.hlsl
dx12/windows/: CMakeLists.txt  Strings.cpp  Strings.h  Window.cpp  Window.h
orig_dx12/: CMakeLists.txt  DXUltra.cpp  DXUltra.h  main.cpp
orig_dx12/common/: Error.h  stdafx.h
orig_dx12/dxutil/: CMakeLists.txt  CommandList.cpp  CommandList.h  DefaultBufferUploader.cpp  DefaultBufferUploader.h  DrawData.cpp  DrawData.h  Fence.cpp  Fence.h  Frame.cpp  Frame.h  Geometry.cpp  Geometry.h  IndexedVertexBuffer.h  Mesh.h  MeshEntry.cpp  MeshEntry.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  UploadBuffer.h  Vertex.cpp  Vertex.h  VertexPipeline.cpp  VertexPipeline.h
orig_dx12/shaders/: CMakeLists.txt
orig_dx12/windows/: CMakeLists.txt  Strings.cpp  Strings.h  Window.cpp  Window.h
